--- a/app/src/main/res/layout/activity_addpost.xml
+++ b/app/src/main/res/layout/activity_addpost.xml
@@ -57,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="ADD POST"
+            android:background="@drawable/roundbtn"
             android:id="@+id/btnadd"/>
 
 
