--- a/app/src/main/res/layout/activity_userupdate.xml
+++ b/app/src/main/res/layout/activity_userupdate.xml
@@ -185,6 +185,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/roundbtn"
                 android:text="Update"
                 android:id="@+id/btnUpdate"/>
 
