--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -138,6 +138,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/roundbtn"
             android:text="Update Profile"
             android:id="@+id/btnUpdate"/>
 
