--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,6 +5,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.UserFragment">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/back"
+        android:backgroundTint="@color/green"
+        android:id="@+id/logout"/>
 
         <RelativeLayout
             android:id="@+id/rellay1"
