--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -99,6 +99,7 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="Password*"
                 android:textColor="#000000"
+                android:inputType="textPassword"
                 android:textSize="18sp" />
 
         </LinearLayout>
